adding some CSS

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 
 <body onload="initGame(event)" oncontextmenu="return false";>
+    <h1>Mine Sweeper</h1>
     <button onclick="levelChoice(4,2)">easy</button>
     <button onclick="levelChoice(8,12)">pro</button>
     <button onclick="levelChoice(12,30)">extreme</button>
