more bonuses added

--- a/index.html
+++ b/index.html
@@ -5,24 +5,37 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MS-desk</title>
+    <title>Mine Sweeper</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body onload="initGame(event)" oncontextmenu="return false" ;>
-    <h1>Mine Sweeper</h1>
     <div class="smily" onclick="reset()">😊</div>
+
     <button onclick="startGame(4,2)">easy</button>
     <button onclick="startGame(8,12)">pro</button>
     <button onclick="startGame(12,30)">extreme</button>
-    <button class="hint" onclick="hint(this)">hints: <span>💡 💡 💡</span></button>
+
+    <div>
+        <button class="manual" onclick="manual(this)">press for manual</button>
+        <button class="undo" onclick="undo()">undo</button>
+    </div>
+
     <table>
         <tbody class="board-container"></tbody>
     </table>
+
     <div class="timer">timer</div>
-    <div class="lives">lives: <span></span></div>
+
+    <div class="lives">lives: <span>❤️❤️❤️</span></div>
+    <button class="safe" onclick="safeClick(this)">safe clicks: <span>🦺🦺🦺</span></button>
+    <button class="hint" onclick="hint(this)">hints: <span>💡 💡 💡</span></button>
+
+    <div class="bestScore">best score: <span></span></div>
+
     <h2>WINNWR!!</h2>
     <h3> LOSER</h3>
+    
     <script src="js/util.js"></script>
     <script src="js/mines.js"></script>
     <script src="js/game.js"></script>
