--- a/index.html
+++ b/index.html
@@ -18,8 +18,10 @@
 
     <div>
         <button class="manual" onclick="manual(this)">press for manual</button>
-        <button class="undo" onclick="undo()">undo</button>
+        <button class="sevenBoom" onclick="sevenBoom()">press for 7BOOM</button>
     </div>
+    
+    <button class="undo" onclick="undo()">undo</button>
 
     <table>
         <tbody class="board-container"></tbody>
@@ -33,9 +35,9 @@
 
     <div class="bestScore">best score: <span></span></div>
 
-    <h2>WINNWR!!</h2>
+    <h2>WINNER!!</h2>
     <h3> LOSER</h3>
-    
+
     <script src="js/util.js"></script>
     <script src="js/mines.js"></script>
     <script src="js/game.js"></script>
