--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 
     <div>
         <button class="manual" onclick="manual(this)">press for manual</button>
-        <button class="sevenBoom" onclick="sevenBoom()">press for 7BOOM</button>
+        <button class="sevenBoom" onclick="sevenBoom(this)">press for 7BOOM</button>
     </div>
-    
+
     <button class="undo" onclick="undo()">undo</button>
 
     <table>
@@ -30,8 +30,8 @@
     <div class="timer">timer</div>
 
     <div class="lives">lives: <span>❤️❤️❤️</span></div>
-    <button class="safe" onclick="safeClick(this)">safe clicks: <span>🦺🦺🦺</span></button>
-    <button class="hint" onclick="hint(this)">hints: <span>💡 💡 💡</span></button>
+    <button class="safe" onclick="safeClick()">safe clicks: <span>🦺🦺🦺</span></button>
+    <button class="hint" onclick="hint()">hints: <span>💡 💡 💡</span></button>
 
     <div class="bestScore">best score: <span></span></div>
 
